--- a/content/docs/(guides)/instances.mdx
+++ b/content/docs/(guides)/instances.mdx
@@ -1,7 +1,6 @@
 ---
 title: Instances
-category: general
-difficulty: medium
+icon: Boxes
 ---
 
 Instances are parallel "rooms" or "lobbies" of a world.
