--- a/content/docs/(guides)/websocket.mdx
+++ b/content/docs/(guides)/websocket.mdx
@@ -1,32 +1,36 @@
 ---
 title: Websocket API
-category: general
-difficulty: hard
-toc: true
+icon: Rss
+description: VRChat's Websocket API, also known as "the pipeline", is used receiving updates regarding the API, such as receiving an invite request. The connection is receive-only, meaning that you can only listen for messages. Sending messages is undefined behavior.
 ---
 
-The VRChat Websocket API (a.k.a. "Pipeline") is used receiving updates regarding the API, such as receiving an invite request.
-The WebSocket is **receive-only**, meaning that you can only listen for messages. Sending messages is undefined behavior.
+import { TypeTable } from 'fumadocs-ui/components/type-table';
+
+**VRChat's Websocket API**, also known as "the pipeline", is used receiving updates regarding the API, such as receiving an invite request. The connection is **receive-only**, meaning that you can only listen for messages. Sending messages is undefined behavior.
 
 ## Connecting
 
 Connecting to the VRChat webhook server is done via the URL:
-`wss://pipeline.vrchat.cloud/?authToken=authcookie_...`
+```
+wss://pipeline.vrchat.cloud/?authToken=authcookie_...
+```
 
-The auth-token query parameter is the authorization cookie you receive when logging into VRChat.
+The `authToken` query parameter is the authorization cookie you receive when logging into VRChat.
 A proper User-Agent is also required to connect to the websocket server.
 It is possible to be connected from multiple locations at the same time. All clients will receive the exact same messages.
 
-> **ℹ️ Most messages are double-encoded!**
->
-> All notification `content` values will be documented in JSON object form. The "`content`" frield is a **stringified** version of the JSON object, and needs to be unpacked separately. _(with the exception of `see-notification` and `hide-notification` events, which take a notification ID instead.)_
->
-> ```json
-> {
->     "type": "notification",
->     "content": "{\"userId\": \"usr_...\"}"
-> }
-> ```
+<Callout type="info">
+**Most messages are double-encoded!**
+
+All notification `content` values will be documented in JSON object form. The "`content`" frield is a **stringified** version of the JSON object, and needs to be unpacked separately. _(with the exception of `see-notification` and `hide-notification` events, which take a notification ID instead.)_
+
+```json
+{
+	"type": "notification",
+	"content": "{\"userId\": \"usr_...\"}"
+}
+```
+</Callout>
 
 ## Note on Enumerations
 
@@ -40,7 +44,7 @@ In this part of the documentation, the following `":identifier"`s will be used t
     - `"traveling"` Indicates a user's client is travelling between instances (e.g., downloading world, synchronizing world state)
         - Also can be `"traveling:traveling`
     - `"private"` Indicates a user's location is not visible to the currently logged-in user. (e.g., Ask Me/Do Not Disturb status, Invite/Invite+/Group instance)
-    - *other values* An actual location (see https://vrchatapi.github.io/tutorials/instances/)
+    - *other values* An actual location (see [Instances](/instances))
 - `":platformString"`
     - `""` Pseudo-null value
     - `"standalonewindows"`
@@ -76,61 +80,62 @@ In this part of the documentation, the following `":identifier"`s will be used t
 
 ### Notification Events
 
-#### notification
-A "`notification`" event carries a Notification object, and are used by Invites, Friend Requests and other in-game notifications.
+#### `notification`
+This event carries a Notification object, and is used by Invites, Friend Requests and other in-game notifications.
+
+See the [Notification API](/reference/get-notifications) for the `content` structure.
 
 ```json
 {
-    "type": "notification",
-    "content": {
-        // <Notification Object>, See return data of Notification API:
-        // https://vrchatapi.github.io/docs/api/#get-/auth/user/notifications
-    }
+	"type": "notification",
+	"content": {
+		// Notification object
+	}
 }
 ```
 
-#### response-notification
-The "`response-notification`" event is used to respond to a previously sent event.
-It carries an ID of the response notification "`responseId`", whereby the data is required to be fetched from the API.
-It also carries "`notificationId`" to indicate which notification this is a response to.
+#### `response-notification`
+This event is used to respond to a previously sent event.
+It carries an ID of the response notification `responseId`, whereby the data is required to be fetched from the API.
+It also carries `notificationId` to indicate which notification this is a response to.
 
 ```json
 {
-    "type": "response-notification",
-    "content": {
-        "notificationId": ":notificationId", // not_00000000-0000-0000-000000000000
-        "receiverId": ":userId", // usr_00000000-0000-0000-000000000000
-        "responseId": ":notificationId", // not_00000000-0000-0000-000000000000
-    }
+	"type": "response-notification",
+	"content": {
+		"notificationId": ":notificationId", // not_00000000-0000-0000-000000000000
+		"receiverId": ":userId", // usr_00000000-0000-0000-000000000000
+		"responseId": ":notificationId", // not_00000000-0000-0000-000000000000
+	}
 }
 ```
 
-#### see-notification
-A "`see-notification`" event is sent when the client should mark a specific notification as seen.
+#### `see-notification`
+This event is sent when the client should mark a specific notification as seen.
 
 ```json
 {
-    "type": "see-notification",
-    "content": ":notificationId" // The ID of the notification to mark as seen.
+	"type": "see-notification",
+	"content": ":notificationId" // The ID of the notification to mark as seen.
 }
 ```
 
-#### hide-notification
-A "`hide-notification`" event is sent when the client should hide a notification.
+#### `hide-notification`
+This event is sent when the client should hide a notification.
 
 ```json
 {
-    "type": "hide-notification",
-    "content": ":notificationId" // The ID of the notification to hide.
+	"type": "hide-notification",
+	"content": ":notificationId" // The ID of the notification to hide.
 }
 ```
 
-#### clear-notification
-A "`clear-notification`" event is sent when the client should clear **all** notifications.
+#### `clear-notification`
+This event is sent when the client should clear **all** notifications.
 
 ```json
 {
-    "type": "clear-notification"
+	"type": "clear-notification"
 }
 ```
 
@@ -138,78 +143,78 @@ A "`clear-notification`" event is sent when the client should clear **all** noti
 
 The `version` property of the `content` of these events all currently have the value `2`.
 
-#### notification-v2
-A "`notification-v2`" event carries a NotificationV2 object.
+#### `notification-v2`
+This event carries a NotificationV2 object.
 
 ```json
 {
-    "type": "notification-v2",
-    "content": {
-        "id":  ":notificationId",
-        "version": 2, // Appears to be a static marker
-        "type": ":notificationV2TypeEnum", // One of: "group.announcement", ???
-        "category": ":notificationV2CategoryEnum", // One of: "social.group", ???
-        "isSystem": <boolean>,
-        "ignoreDND": <boolean>,
-        "senderUserId": ":userId", // NOTE: WILL BE NULL if the notification didn't originate from a user
-        "senderUsername": ":username", // NOTE: same as "senderUserId"
-        "receiverUserId": ":userId",
-        "relatedNotificationsId": ":?Id", // gpos_00000000-0000-0000-0000-000000000000
-        "title": ":string",
-        "message": ":string",
-        "imageUrl": ":assetUrl",
-        "link": ":notificationLinkUri", // The scheme is the type of the linked object, and the path is the id of that object, e.g.: "group:grp_00000000-0000-0000-0000-000000000000"
-        "linkText": ":string",
-        "responses": [
-            {
-                "type": ":notificationV2ResponseTypeEnum", // One of: "delete", "unsubscribe", ???
-                "data": ":string", // Auxiliary data
-                                   // If the type is "delete", then this will be empty
-                                   // If the type is "unsubscribe", then this will be the id of the sending object, a comma, and the id of the (recieving) user
-                                   //   e.g.: grp_00000000-0000-0000-000000000000,usr_00000000-0000-0000-000000000000
-                "icon": ":notificationV2ResponseIconEnum", // One of: "check", "bell-slash", ???
-                "text": ":string"
-            }
-        ],
-        "expiresAt": "dateTimeString", // yyyy-mm-ddThh:mm:ss.sssZ
-        "expiryAfterSeen": <number>, // Typically 900
-        "requireSeen": <boolean>,
-        "seen": <boolean>,
-        "canDelete": <boolean>,
-        "createdAt": ":dateTimeString",
-        "updatedAt": ":dateTimeString"
-    }
+	"type": "notification-v2",
+	"content": {
+		"id":  ":notificationId",
+		"version": 2, // Appears to be a static marker
+		"type": ":notificationV2TypeEnum", // One of: "group.announcement", ???
+		"category": ":notificationV2CategoryEnum", // One of: "social.group", ???
+		"isSystem": <boolean>,
+		"ignoreDND": <boolean>,
+		"senderUserId": ":userId", // NOTE: WILL BE NULL if the notification didn't originate from a user
+		"senderUsername": ":username", // NOTE: same as "senderUserId"
+		"receiverUserId": ":userId",
+		"relatedNotificationsId": ":?Id", // gpos_00000000-0000-0000-0000-000000000000
+		"title": ":string",
+		"message": ":string",
+		"imageUrl": ":assetUrl",
+		"link": ":notificationLinkUri", // The scheme is the type of the linked object, and the path is the id of that object, e.g.: "group:grp_00000000-0000-0000-0000-000000000000"
+		"linkText": ":string",
+		"responses": [
+			{
+				"type": ":notificationV2ResponseTypeEnum", // One of: "delete", "unsubscribe", ???
+				"data": ":string", // Auxiliary data
+				                   // If the type is "delete", then this will be empty
+				                   // If the type is "unsubscribe", then this will be the id of the sending object, a comma, and the id of the (recieving) user
+				                   //   e.g.: grp_00000000-0000-0000-000000000000,usr_00000000-0000-0000-000000000000
+				"icon": ":notificationV2ResponseIconEnum", // One of: "check", "bell-slash", ???
+				"text": ":string"
+			}
+		],
+		"expiresAt": "dateTimeString", // yyyy-mm-ddThh:mm:ss.sssZ
+		"expiryAfterSeen": <number>, // Typically 900
+		"requireSeen": <boolean>,
+		"seen": <boolean>,
+		"canDelete": <boolean>,
+		"createdAt": ":dateTimeString",
+		"updatedAt": ":dateTimeString"
+	}
 }
 ```
 
-#### notification-v2-update
-A "`notification-v2-update`" event is sent when the client should update a notification, overwriting at least one property.
+#### `notification-v2-update`
+This event is sent when the client should update a notification, overwriting at least one property.
 
 ```json
 {
-    "type": "notification-v2-update",
-    "content": {
-        "id":  ":notificationId",
-        "version": 2,
-        "updates": {
-            // These properties are to be overwrite the properties found in the content of a `notification-v2` event
-        }
-    }
+	"type": "notification-v2-update",
+	"content": {
+		"id":  ":notificationId",
+		"version": 2,
+		"updates": {
+			// These properties are to be overwrite the properties found in the content of a `notification-v2` event
+		}
+	}
 }
 ```
 
-#### notification-v2-delete
-A "`notification-v2-delete`" event is sent when the client should delete one or more notifications.
+#### `notification-v2-delete`
+This event is sent when the client should delete one or more notifications.
 
 ```json
 {
-    "type": "notification-v2-delete",
-    "content": {
-        "ids": [
-            ":notificationId"
-        ],
-        "version": 2
-    }
+	"type": "notification-v2-delete",
+	"content": {
+		"ids": [
+			":notificationId"
+		],
+		"version": 2
+	}
 }
 ```
 
@@ -217,117 +222,122 @@ A "`notification-v2-delete`" event is sent when the client should delete one or 
 
 ### Friend Events
 
-#### friend-add
-A "`friend-add`" event is sent when the user has either accepted a friend request, or has had one of their friend requests accepted.
+#### `friend-add`
+This event is sent when the user has either accepted a friend request, or has had one of their friend requests accepted.
+
+Refer to the [User API](/reference/get-user) for the `user` object structure.
 
 ```json
 {
-    "type": "friend-add",
-    "content": {
-        "userId": ":userId", // usr_00000000-0000-0000-000000000000
-        "user": {
-            // <User Object>, See return data of User API:
-            // https://vrchatapi.github.io/docs/api/#get-/users/-userId-
-        }
-    }
+	"type": "friend-add",
+	"content": {
+		"userId": ":userId", // usr_00000000-0000-0000-000000000000
+		"user": {
+			// User object
+		}
+	}
 }
 ```
 
-#### friend-delete
-A "`friend-delete`" event is sent when the user has either been removed as a friend, or has removed someone else as a friend.
+#### `friend-delete`
+This event is sent when the user has either been removed as a friend, or has removed someone else as a friend.
 
 ```json
 {
-    "type": "friend-delete",
-    "content": {
-        "userId": ":userId"
-    }
+	"type": "friend-delete",
+	"content": {
+		"userId": ":userId"
+	}
 }
 ```
 
-#### friend-online
-A "`friend-online`" event is sent when one of the user's friends has gone online in-game. Note that the "`world`" field will be an empty object when the friend is on orange/red, or is in a private world.
+#### `friend-online`
+This event is sent when one of the user's friends has gone online in-game. Note that the `world` field will be an empty object when the friend is on orange/red, or is in a private world.
+
+The `user` field follows the [User API](/reference/get-user) schema.
 
 ```json
 {
-    "type": "friend-online",
-    "content": {
-        "userId": ":userId",
-        "platform": ":platformString",
-        "location": ":locationString",
-        "canRequestInvite": <boolean>,
-        "user": {
-            // <User Object>, See return data of User API:
-            // https://vrchatapi.github.io/docs/api/#get-/users/-userId-
-        }
-    }
+	"type": "friend-online",
+	"content": {
+		"userId": ":userId",
+		"platform": ":platformString",
+		"location": ":locationString",
+		"canRequestInvite": <boolean>,
+		"user": {
+			// User object
+		}
+	}
 }
 ```
 
-#### friend-active
-A "`friend-active`" event is sent when one of the user's friends is active on the website.
+#### `friend-active`
+This event is sent when one of the user's friends is active on the website.
+
+User data matches the [User API](/reference/get-user) response format.
 
 ```json
 {
-    "type": "friend-active",
-    "content": {
-        "userid": ":userId",
-        "platform": ":platformString", // Appears only to be "web" from these events
-        "user": {
-            // <User Object>, See return data of User API:
-            // https://vrchatapi.github.io/docs/api/#get-/users/-userId-
-        }
-    }
+	"type": "friend-active",
+	"content": {
+		"userid": ":userId",
+		"platform": ":platformString", // Appears only to be "web" from these events
+		"user": {
+			// User object
+		}
+	}
 }
 ```
 
-#### friend-offline
-A "`friend-offline`" event is sent when one of the user's friends has gone offline.
+#### `friend-offline`
+This event is sent when one of the user's friends has gone offline.
 
 ```json
 {
-    "type": "friend-offline",
-    "content": {
-        "userId": ":userId",
-        "platform": ":platformString", // Appears only to be empty "" from these events
-    }
+	"type": "friend-offline",
+	"content": {
+		"userId": ":userId",
+		"platform": ":platformString", // Appears only to be empty "" from these events
+	}
 }
 ```
 
-#### friend-update
-A "`friend-update`" event is sent when something about one of the user's friends profile has changed.
+#### `friend-update`
+This event is sent when something about one of the user's friends profile has changed.
+
+Profile information is structured according to the [User API](/reference/get-user).
 
 ```json
 {
-    "type": "friend-update",
-    "content": {
-        "userId": ":userId",
-        "user": {
-            // <User Object>, See return data of User API:
-            // https://vrchatapi.github.io/docs/api/#get-/users/-userId-
-        }
-    }
+	"type": "friend-update",
+	"content": {
+		"userId": ":userId",
+		"user": {
+			// User object
+		}
+	}
 }
 ```
 
 
-#### friend-location
-A "`friend-location`" event is sent when one of the user's friends has changed instances. Note that the `worldId` field will be `"private"` when the friend is on orange/red, or is in a private world.
+#### `friend-location`
+This event is sent when one of the user's friends has changed instances. Note that the `worldId` field will be `"private"` when the friend is on orange/red, or is in a private world.
+
+User details are provided in the same format as the [User API](/reference/get-user).
 
 ```json
 {
-    "type": "friend-location",
-    "content": {
-        "userId": ":userId",
-        "location": ":locationString",
-        "travelingToLocation": ":locationString", // normally empty "", but when the above "location" is "traveling", this contains the imminent destination
-        "worldId": ":worldId",
-        "canRequestInvite": <boolean>,
-        "user": {
-            // <User Object>, See return data of User API:
-            // https://vrchatapi.github.io/docs/api/#get-/users/-userId-
-        }
-    }
+	"type": "friend-location",
+	"content": {
+		"userId": ":userId",
+		"location": ":locationString",
+		"travelingToLocation": ":locationString", // normally empty "", but when the above "location" is "traveling", this contains the imminent destination
+		"worldId": ":worldId",
+		"canRequestInvite": <boolean>,
+		"user": {
+			// User object
+		}
+	}
 }
 ```
 
@@ -337,139 +347,140 @@ A "`friend-location`" event is sent when one of the user's friends has changed i
 
 User events are relating to the current user logged in.
 
-#### user-update
-A "`user-update`" event is sent when something regarding the user has been updated. Note that the "`user`" object is **not** a LimitedUser object, even though it has similarities. It's missing `developerType`, `friendKey`, `isFriend`, `last_platform` and `location`. It also has an extra `currentAvatar` field.
+#### `user-update`
+This event is sent when something regarding the user has been updated. Note that the `user` object is **not** a LimitedUser object, even though it has similarities. It's missing `developerType`, `friendKey`, `isFriend`, `last_platform` and `location`. It also has an extra `currentAvatar` field.
 
 ```json
 {
-    "type": "user-update",
-    "content": {
-        "userId": ":userId",
-        "user": {
-            "bio": ":bioString",
-            "currentAvatar": ":avatarId",
-            "currentAvatarImageUrl": ":assetUrl",
-            "currentAvatarThumbnailImageUrl": ":assetUrl",
-            "displayName": ":displayName",
-            "fallbackAvatar": ":avatarId",
-            "id": ":userId",
-            "profilePicOverride": ":assetUrl",
-            "status": ":statusEnum",
-            "statusDescription": ":statusString",
-            "tags": [
-                ":tag"
-            ],
-            "userIcon": ":assetUrl",
-            "username": ":username"
-        }
-    }
+	"type": "user-update",
+	"content": {
+		"userId": ":userId",
+		"user": {
+			"bio": ":bioString",
+			"currentAvatar": ":avatarId",
+			"currentAvatarImageUrl": ":assetUrl",
+			"currentAvatarThumbnailImageUrl": ":assetUrl",
+			"displayName": ":displayName",
+			"fallbackAvatar": ":avatarId",
+			"id": ":userId",
+			"profilePicOverride": ":assetUrl",
+			"status": ":statusEnum",
+			"statusDescription": ":statusString",
+			"tags": [
+				":tag"
+			],
+			"userIcon": ":assetUrl",
+			"username": ":username"
+		}
+	}
 }
 ```
 
 
-#### user-location
-A "`user-location`" event is sent when the user has changed instances.
+#### `user-location`
+This event is sent when the user has changed instances.
+
+The included user data conforms to the [User API](/reference/get-user) specification.
 
 ```json
 {
-    "type": "user-location",
-    "content": {
-        "userId": ":userId",
-        "user": {
-            // <User Object>, See return data of User API:
-            // https://vrchatapi.github.io/docs/api/#get-/users/-userId-
-        },
-        "location": ":locationString",
-        "instance": ":instanceId", // This is locationString without the World ID part.
-        "travelingToLocation": ":locationString"
-    }
+	"type": "user-location",
+	"content": {
+		"userId": ":userId",
+		"user": {
+			// User object
+		},
+		"location": ":locationString",
+		"instance": ":instanceId", // This is locationString without the World ID part.
+		"travelingToLocation": ":locationString"
+	}
 }
 ```
 
 
-#### user-badge-assigned
-A "`user-badge-assigned`" event is sent when the user obtains a badge, such as for subscribing to VRChat+.
+#### `user-badge-assigned`
+This event is sent when the user obtains a badge, such as for subscribing to VRChat+.
 
 ```json
 {
-    "type": "user-badge-assigned",
-    "content": {
-        "badge": ":badge"
-    }
+	"type": "user-badge-assigned",
+	"content": {
+		"badge": ":badge"
+	}
 }
 ```
 
 
-#### user-badge-unassigned
-A "`user-badge-unassigned`" event is sent when the user loses a badge, such a VRChat+ subscription expiring.
+#### `user-badge-unassigned`
+This event is sent when the user loses a badge, such a VRChat+ subscription expiring.
 
 ```json
 {
-    "type": "user-badge-unassigned",
-    "content": {
-        "badgeId": ":badgeId"
-    }
+	"type": "user-badge-unassigned",
+	"content": {
+		"badgeId": ":badgeId"
+	}
 }
 ```
 
 
-#### content-refresh
-A "`content-refresh`" event is sent when the user adds or removes profile images etc.
+#### `content-refresh`
+This event is sent when the user adds or removes profile images etc.
 
 ```json
 {
-    "type": "content-refresh",
-    "content": {
-        "contentType": ":contentRefreshContentTypeEnum",
-        "fileId": ":id", // Id for the content updated (avatar, world, file, etc.)
-        "itemId": ":inventoryId", // Id for `inventory` item
-        "itemType": ":inventoryType", // Type of `inventory` item
-        "actionType": ":contentRefreshActionTypeEnum"
-    }
+	"type": "content-refresh",
+	"content": {
+		"contentType": ":contentRefreshContentTypeEnum",
+		"fileId": ":id", // Id for the content updated (avatar, world, file, etc.)
+		"itemId": ":inventoryId", // Id for `inventory` item
+		"itemType": ":inventoryType", // Type of `inventory` item
+		"actionType": ":contentRefreshActionTypeEnum"
+	}
 }
 ```
 
 
-#### modified-image-update
-A "`modified-image-update`" event is sent when an image file is modified.
+#### `modified-image-update`
+This event is sent when an image file is modified.
 
 ```json
 {
-    "type": "modified-image-update",
-    "content": {
-        "fileId": ":id", // Id for the image updated
-        "pixelSize": <number>, // Integer size, in pixels, of the image
-        "versionNumber": <number>, // Integer version of the image
-        "needsProcessing": <boolean> // Whether the image requires processing
-    }
+	"type": "modified-image-update",
+	"content": {
+		"fileId": ":id", // Id for the image updated
+		"pixelSize": <number>, // Integer size, in pixels, of the image
+		"versionNumber": <number>, // Integer version of the image
+		"needsProcessing": <boolean> // Whether the image requires processing
+	}
 }
 ```
 
 
-#### instance-queue-joined
-A "`instance-queue-joined`" event is sent when the user queues to join an instance.
+#### `instance-queue-joined`
+This event is sent when the user queues to join an instance.
 
 ```json
 {
-    "type": "instance-queue-joined",
-    "content": {
-        "instanceLocation": ":locationString",
-        "position": <number> // Integer position in queue
-    }
+	"type": "instance-queue-joined",
+	"content": {
+		"instanceLocation": ":locationString",
+		"position": <number> // Integer position in queue
+	}
 }
 ```
 
 
-#### instance-queue-ready
-A "`instance-queue-ready`" event is sent when the user is at the front of the queue.
+#### `instance-queue-ready`
+This event is sent when the user is at the front of the queue.
 
 ```json
 {
-    "type": "instance-queue-ready",
-    "content": {
-        "instanceLocation": ":locationString",
-        "expiry": ":dateTimeString" // Time at which priority will be lost
-    }
+	"type": "instance-queue-ready",
+	"content": {
+		"instanceLocation": ":locationString",
+		"expiry": ":dateTimeString" // Time at which priority will be lost
+	}
 }
 ```
 
@@ -477,59 +488,61 @@ A "`instance-queue-ready`" event is sent when the user is at the front of the qu
 
 ### Group Events
 
-#### group-joined
-A "`group-joined`" event is sent when the user has either joined a group, or has had one of their group join requests accepted.
+#### `group-joined`
+This event is sent when the user has either joined a group, or has had one of their group join requests accepted.
 
 ```json
 {
-    "type": "group-joined",
-    "content": {
-        "groupId": ":groupId" // grp_00000000-0000-0000-000000000000
-    }
+	"type": "group-joined",
+	"content": {
+		"groupId": ":groupId" // grp_00000000-0000-0000-000000000000
+	}
 }
 ```
 
 
-#### group-left
-A "`group-left`" event is sent when the user has either left a group, or has been removed from a group.
+#### `group-left`
+This event is sent when the user has either left a group, or has been removed from a group.
 
 ```json
 {
-    "type": "group-left",
-    "content": {
-        "groupId": ":groupId"
-    }
+	"type": "group-left",
+	"content": {
+		"groupId": ":groupId"
+	}
 }
 ```
 
 
-#### group-member-updated
-A "`group-member-updated`" event is sent when something regarding the user's group membership changes. Note that the optional values in the `member` are as if "fetching a specific user", per the schema description.
+#### `group-member-updated`
+This event is sent when something regarding the user's group membership changes. Note that the optional values in the `member` are as if "fetching a specific user", per the schema description.
+
+Membership details follow the [Groups API](/reference/get-group-member) GroupLimitedMember format.
 
 ```json
 {
-    "type": "group-member-updated",
-    "content": {
-        "member": {
-            // <GroupLimitedMember Object>, See return data of Groups API:
-            // https://vrchatapi.github.io/docs/api/#get-/groups/-groupId-/members/-userId-
-        }
-    }
+	"type": "group-member-updated",
+	"content": {
+		"member": {
+			// GroupLimitedMember object
+		}
+	}
 }
 ```
 
 
-#### group-role-updated
-A "`group-role-updated`" event is sent when something regarding one of the user's group's roles changes.
+#### `group-role-updated`
+This event is sent when something regarding one of the user's group's roles changes.
+
+Role structure matches the GroupRole object from the [Groups API](/reference/get-group-roles).
 
 ```json
 {
-    "type": "group-role-updated",
-    "content": {
-        "role": {
-            // <GroupRole Object>, See return data of Groups API:
-            // https://vrchatapi.github.io/docs/api/#get-/groups/-groupId-/roles
-        }
-    }
+	"type": "group-role-updated",
+	"content": {
+		"role": {
+			// GroupRole object
+		}
+	}
 }
 ```
