--- a/content/docs/(sdks)/dotnet.mdx
+++ b/content/docs/(sdks)/dotnet.mdx
@@ -35,6 +35,8 @@ dotnet add package VRChat.API.Extensions.Hosting
 
 The following example code authenticates you with the API and logs you in.
 
+If you don't have two-factor authentication set up on your account, scroll below to see how to use email authentication.
+
 ```cs
 using System;
 using VRChat.API.Client;
@@ -47,10 +49,17 @@ IVRChat vrchat = new VRChatClientBuilder() // More options available
     .WithApplication(name: "Example", version: "1.0.0", contact: "CONTACT_EMAIL")
     .Build();
 
-// Recommended to set up 2FA on your account for seamless login
+// Reccomended to set up 2FA on your account for seamless login
+
 // There is also IVRChat.TryLoginAsync()
-var user = await vrchat.LoginAsync();
-Console.WriteLine($"Logged in as {user.DisplayName}!");
+var currentUser = await vrchat.LoginAsync();
+Console.WriteLine($"Logged in as {currentUser.DisplayName}!");
+
+var user = await vrchat.Users.GetUserAsync("usr_f2049d71-e76b-42d2-a8bd-43deec9c004e");
+Console.WriteLine($"Found user {user.DisplayName}, joined at {user.DateJoined}");
+
+var world = await vrchat.Worlds.GetWorldAsync("wrld_ba913a96-fac4-4048-a062-9aa5db092812");
+Console.WriteLine($"Found world {world.Name}, with {world.Visits} visits");
 ```
 
 The builder is quite flexible and will let you customize as you see fit.
@@ -135,6 +144,37 @@ The SDK includes several example projects to help you get started:
 
 - **Console app (login)**: See [VRChat.API.Examples.Console](https://github.com/vrchatapi/vrchatapi-csharp/tree/main/examples/VRChat.API.Examples.Console/)
 - **ASP.NET Core (dependency injection)**: See [VRChat.API.Examples.AspNetCore](https://github.com/vrchatapi/vrchatapi-csharp/tree/main/examples/VRChat.API.Examples.AspNetCore/)
+
+# Email-based two factor authentication
+
+Sometimes, we don't have two-factor authentication set up on our accounts. While it's **reccomended** for most bots or apps, your app may be a WPF/WinForms application that requires user credential input. In these cases, the `LoginAsync()` methods on `IVRChat` won't work, because they only support token-based two-factor authentication.
+
+Here is an example of how you can implement this in the .NET SDK:
+
+```cs
+using System;
+using VRChat.API.Client;
+using VRChat.API.Model;
+
+// WithApplication or WithUserAgent is required or VRChat will reject your requests
+IVRChat vrchat = new VRChatClientBuilder() // More options available
+    .WithUsername("username")
+    .WithPassword("password")
+    .WithApplication(name: "Example", version: "1.0.0", contact: "CONTACT_EMAIL")
+    .Build();
+
+var response = await vrchat.Authentication.GetCurrentUserAsync();
+if(response.RequiresTwoFactorAuth.Contains("emailOtp"))
+{
+    Console.Write("Enter code: ");
+    string code = Console.ReadLine();
+    var otpResponse = await vrchat.Authentication.Verify2FAEmailCodeAsync(new TwoFactorEmailCode(code));
+}
+
+var user = await vrchat.Authentication.GetCurrentUserAsync();
+
+Console.WriteLine($"Logged in as {user.DisplayName}!");
+```
 
 ## Contributing
 
