--- a/content/docs/(sdks)/dotnet.mdx
+++ b/content/docs/(sdks)/dotnet.mdx
@@ -145,7 +145,7 @@ The SDK includes several example projects to help you get started:
 - **Console app (login)**: See [VRChat.API.Examples.Console](https://github.com/vrchatapi/vrchatapi-csharp/tree/main/examples/VRChat.API.Examples.Console/)
 - **ASP.NET Core (dependency injection)**: See [VRChat.API.Examples.AspNetCore](https://github.com/vrchatapi/vrchatapi-csharp/tree/main/examples/VRChat.API.Examples.AspNetCore/)
 
-# Email-based two factor authentication
+# Manually authenticating
 
 Sometimes, we don't have two-factor authentication set up on our accounts. While it's **reccomended** for most bots or apps, your app may be a WPF/WinForms application that requires user credential input. In these cases, the `LoginAsync()` methods on `IVRChat` won't work, because they only support token-based two-factor authentication.
 
@@ -164,11 +164,20 @@ IVRChat vrchat = new VRChatClientBuilder() // More options available
     .Build();
 
 var response = await vrchat.Authentication.GetCurrentUserAsync();
+
 if(response.RequiresTwoFactorAuth.Contains("emailOtp"))
 {
+    Console.WriteLine("An verification code was sent to your email address!");
     Console.Write("Enter code: ");
     string code = Console.ReadLine();
     var otpResponse = await vrchat.Authentication.Verify2FAEmailCodeAsync(new TwoFactorEmailCode(code));
+}
+else if(response.RequiresTwoFactorAuth.Contains("totp"))
+{
+    Console.WriteLine("Please use your authenticator application to get the two-factor code.");
+    Console.Write("Enter code: ");
+    string code = Console.ReadLine();
+    var otpResponse = await vrchat.Authentication.Verify2FAAsync(new TwoFactorAuthCode(code));
 }
 
 var user = await vrchat.Authentication.GetCurrentUserAsync();
