--- a/content/docs/(sdks)/dotnet.mdx
+++ b/content/docs/(sdks)/dotnet.mdx
@@ -35,7 +35,7 @@ dotnet add package VRChat.API.Extensions.Hosting
 
 The following example code authenticates you with the API and logs you in.
 
-If you don't have two-factor authentication set up on your account, scroll below to see how to use email authentication.
+If you use manual two-factor authentication, scroll to the Manual Authentication section below for an example.
 
 ```cs
 using System;
