--- a/content/docs/(sdks)/dotnet.mdx
+++ b/content/docs/(sdks)/dotnet.mdx
@@ -35,7 +35,7 @@ dotnet add package VRChat.API.Extensions.Hosting
 
 The following example code authenticates you with the API and logs you in.
 
-If you use manual two-factor authentication, scroll to the Manual Authentication section below for an example.
+If you use manual or email-based two-factor authentication, scroll to the Manual Authentication section below for an example.
 
 ```cs
 using System;
