Fix code block formatting in dotnet.mdx
Updated code block formatting from 'package-install' to 'bash' for clarity.

--- a/content/docs/(sdks)/dotnet.mdx
+++ b/content/docs/(sdks)/dotnet.mdx
@@ -19,7 +19,7 @@ Please review the [API guidelines and disclaimers](https://vrchat.community/) on
 
 Install with NuGet:
 
-```package-install
+```bash
 dotnet add package VRChat.API
 ```
 
@@ -27,7 +27,7 @@ dotnet add package VRChat.API
 
 If you're working with Dependency Injection like ASP.NET Core or Discord.Net, make sure to also install the DI package:
 
-```package-install
+```bash
 dotnet add package VRChat.API.Extensions.Hosting
 ```
 
